save icons per-folder

--- a/style.css
+++ b/style.css
@@ -61,6 +61,12 @@ body {
 
 #extract-button {
     font-size: 24px;
+    margin: 4px;
+}
+
+#savezip {
+    font-size: 24px;
+    margin: 4px;
 }
 
 .output {
