--- a/style.css
+++ b/style.css
@@ -69,6 +69,12 @@ body {
     margin: 4px;
 }
 
+.instructions {
+    font-size: 24px;
+    display: block;
+    text-align: center;
+}
+
 .output {
     display: flex;
 }
